# audit-parser

./: .gitignore  Cargo.toml  README.md  Web Audit.json  audit.h  strip_html.sh
src/: audit.pest  constants.rs  html_parser.rs  lib.rs
