[package]
name = "audit-parser"
version = "0.1.0"
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"

[lib]
name = "audit_parser"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4", features =["serde"]}
serde = {version = "1.0", features =["derive"]}
serde_json = "1.0"
pest = "2.1"
pest_derive = "2.1"